--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "litellm>=1.72.0",
     "numpy>=2.2.6",
     "pandas>=2.2.3",
+    "pydantic>=2.11.5",
+    "pytest>=8.4.0",
     "scikit-learn>=1.6.1",
 ]
