--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,3 +60,8 @@ python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
+
+[dependency-groups]
+dev = [
+    "types-requests>=2.32.0.20250602",
+]
