--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "numpy>=2.2.6",
     "pandas>=2.2.3",
     "pydantic>=2.11.5",
+    "rich>=14.0.0",
     "scikit-learn>=1.6.1",
     "shap>=0.47.2",
 ]
