improvements to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 **/__pycache__
+
 .venv
-.claude
+
 .coverage
-.pytest_cache/
-.mypy_cache/
-__pycache__/
+
+.pytest_cache
+.mypy_cache
+.ruff_cache
+
+dist
+
 *.pyc
 *.pyo
 *.pyd
-.cache/
-.ruff_cache/
+
